# nasa-apod-quickstarts

./: README.md  package-lock.json  package.json  package.oo.yaml  pyproject.toml
flows/1-simple/: .flow.ui.oo.json  flow.oo.yaml
flows/1-simple/scriptlets/: +scriptlet#1.ts
flows/2-compression-and-save/: .flow.ui.oo.json  flow.oo.yaml
flows/2-compression-and-save/scriptlets/: +scriptlet#1.ts  +scriptlet#2.ts
flows/3-secret/: .flow.ui.oo.json  flow.oo.yaml
flows/3-secret/scriptlets/: +scriptlet#1.ts
